cluster/gitops/tug2/insurgency/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.34.0.16
  name: insurgency-server
spec:
  selector:
    kubevirt.io/vm: insurgency-server
  type: LoadBalancer
  ports:
    # tug2-insurgency-main
    - name: game-udp
      port: 27000
      protocol: UDP
    - name: netcon
      port: 27023
    # tug2-insurgency-test
    - name: game-udp-test
      port: 27001
      protocol: UDP
