cluster/gitops/tug2/insurgency/server/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: insurgency-server
specs:
  - description: insurgency-server
    endpointSelector:
      matchLabels:
        kubevirt.io/vm: insurgency-server
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # NTP
      - toFQDNs:
          - matchPattern: "*.nixos.pool.ntp.org"
        toPorts:
          - ports:
              - port: "123"
                protocol: UDP
      # To Harbor to pull images
      - &to_harbor
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
      # To Teleport for node communication
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: security
              app.kubernetes.io/name: teleport-cluster
              app.kubernetes.io/instance: teleport-cluster
              app.kubernetes.io/component: proxy
        toPorts:
          - ports:
              - port: "3080"
                protocol: TCP
      # To Steam for master server, auth ticket checks, workshop, etc.
      - toFQDNs:
          - matchPattern: "*.steampowered.com"
          - matchPattern: "*.steamserver.net"
          - matchPattern: "*.steamcontent.com"
          - matchName: fastly.cdn.steampipe.steamcontent.com
          - matchName: steampipe.akamaized.net
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
              - port: "27018"
                endPort: 27036
                protocol: TCP
      # Steam's plain-HTTP connectivity checks (steamconnecttest.com is on Akamai)
      - toFQDNs:
          - matchName: steamconnecttest.com
          - matchPattern: test.steampowered.com
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
      - toFQDNs:
          # To Let's Encrypt to get CRLs
          - matchPattern: "*.c.lencr.org"
          # To digicert to get CRLs
          - matchPattern: "*.digicert.com"
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
      # Access to the backend PostgreSQL database
      - toEndpoints:
          - matchLabels:
              cnpg.io/cluster: insurgency-postgres
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      # Access to dockerhub to pull Envoy image
      - toFQDNs:
          - matchName: registry-1.docker.io
          - matchName: production.cloudflare.docker.com
          - matchName: production.cloudfront.docker.com
          - matchName: auth.docker.io
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
      # Access to Discord for webhook notifications
      - toFQDNs:
          - matchPattern: "discord.com"
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # Host for bootstrapping
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "23"
                protocol: TCP
      # Game server traffic
      # TCP/27000 is RCON, not game traffic, and isn't published by the service. Not copied below.
      - fromEntities:
          - world
        toPorts:
          - ports:
              - port: "27000"
                protocol: TCP
              - port: "27000"
                protocol: UDP
              # tug2-insurgency-test
              - port: "27001"
                protocol: UDP
      # Local network for administrative access to game server
      - fromCIDRSet:
          - cidrGroupRef: intranet
        toPorts:
          - ports:
              - port: "27023"
                protocol: TCP
